[package]
name = "introduction-pods"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
anyhow = "1.0.56"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2" }
base64 = "0.22.1"
# we use a specific commit to avoid breaking changes in the interfaces, updating
# to latest pod2 version from time to time.
pod2 = { git="https://github.com/0xPARC/pod2", rev="c66506c04871dd87c40284de31490e33e2179804" }

# EcdsaPod specific dependencies:
plonky2_ecdsa = {git = "https://github.com/ax0/plonky2-ecdsa"}
num = { version = "0.4.0", default-features = false }
plonky2_ed25519 = {git = "https://github.com/ainta/plonky2-ed25519"}
ssh-key = { version = "0.6.7", features = ["ed25519"] }

[features]
default = []
metrics = ["pod2/metrics"]
time = ["pod2/time"]
