[package]
name = "introduction-pods"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
anyhow = "1.0.56"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2" }
base64 = "0.22.1"

serde = "1.0.219"
serde_json = "1.0.140"
ssh-key = { version = "0.6.7", features = ["ed25519"] }
sha2          = "0.10"

# we use a specific commit to avoid breaking changes in the interfaces, updating
# to latest pod2 version from time to time.
pod2 = { git="https://github.com/0xPARC/pod2", rev="115c3c11524a0426a1b74db26ea0c78bf90bddb8" }

# EcdsaPod specific dependencies:
plonky2_ecdsa = {git = "https://github.com/ainta/plonky2-ecdsa"}
num = { version = "0.4.0", default-features = false }
plonky2_ed25519 = {git = "https://github.com/ainta/plonky2-ed25519"}
plonky2_sha256 = { git = "https://github.com/ainta/plonky2-sha256" }
plonky2_u32 = { git = "https://github.com/ax0/plonky2-u32" }

# RsaPod specific dependencies:
plonky2_rsa = { git = "https://github.com/dgulotta/plonky2-rsa.git", branch="fast" }

# MdlPod specific dependencies:
memchr = "2.7.5"
ciborium = "0.2.2"

[dev-dependencies]
rand = "0.8.5"
x509-parser   = "0.16"
p256          = { version = "0.13.2", features = ["ecdsa", "pkcs8"] }

[features]
default = []
metrics = ["pod2/metrics"]
time = ["pod2/time"]
